Enhance modal focus management and improve accessibility for premium alert close button

--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@
           <strong id="alertTitle"></strong>
           <p id="alertMessage"></p>
         </div>
-        <button class="premium-alert-close" onclick="hidePremiumAlert()">
+        <button class="premium-alert-close" aria-label="Close alert">
           <i class="bi bi-x"></i>
         </button>
       </div>
